--- a/.github/workflows/python-app.yaml
+++ b/.github/workflows/python-app.yaml
@@ -47,7 +47,7 @@ jobs:
         run: pytest -v  
 
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     needs: test
     steps:
       - name: Checkout repository
@@ -69,3 +69,10 @@ jobs:
 
       - name: List build output
         run: ls -R dist/
+
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: dist/**
+          body: "Binaries of the uppercase program"
+          tag_name: ${{ github.ref_name }}
